wxc/include/ewxw/wxc_glue.h



/* wxInitDialogEvent */
TClassDefExtend(wxInitDialogEvent,wxEvent)

/* wxInputStream */
TClassDefExtend(wxInputStream,wxStreamBase)
void       wxInputStream_Delete( TSelf(wxInputStream) _obj );

TBool      wxInputStream_Eof( TSelf(wxInputStream) _obj );

TChar      wxInputStream_GetC( TSelf(wxInputStream) _obj );

int        wxInputStream_LastRead( TSelf(wxInputStream) _obj );

TChar      wxInputStream_Peek( TSelf(wxInputStream) _obj );

void       wxInputStream_Read( TSelf(wxInputStream) _obj, void* buffer, int size );

int        wxInputStream_SeekI( TSelf(wxInputStream) _obj, int pos, int mode );

int        wxInputStream_Tell( TSelf(wxInputStream) _obj );

int        wxInputStream_UngetBuffer( TSelf(wxInputStream) _obj, void* buffer, int size );

int        wxInputStream_Ungetch( TSelf(wxInputStream) _obj, TChar c );

int        wxOutputStream_LastWrite( TSelf(wxOutputStream) _obj );

void       wxOutputStream_PutC( TSelf(wxOutputStream) _obj, TChar c );

int        wxOutputStream_Seek( TSelf(wxOutputStream) _obj, int pos, int mode );

void       wxOutputStream_Sync( TSelf(wxOutputStream) _obj );

int        wxOutputStream_Tell( TSelf(wxOutputStream) _obj );

void       wxOutputStream_Write( TSelf(wxOutputStream) _obj, void* buffer, int size );

TClass(wxProcess) wxProcess_CreateDefault( TClass(wxWindow) _prt, int _id );

TClass(wxProcess) wxProcess_CreateRedirect( TClass(wxWindow) _prt, TBool _rdr );

void       wxProcess_Delete( TSelf(wxProcess) _obj );

void       wxProcess_Detach( TSelf(wxProcess) _obj );

TClass(wxInputStream) wxProcess_GetErrorStream( TSelf(wxProcess) _obj );

TClass(wxInputStream) wxProcess_GetInputStream( TSelf(wxProcess) _obj );

TClass(wxOutputStream) wxProcess_GetOutputStream( TSelf(wxProcess) _obj );

TBool      wxProcess_IsRedirected( TSelf(wxProcess) _obj );

void       wxProcess_Redirect( TSelf(wxProcess) _obj );


/* wxProcessEvent */
TClassDefExtend(wxProcessEvent,wxEvent)
int        wxProcessEvent_GetExitCode( TSelf(wxProcessEvent) _obj );

int        wxProcessEvent_GetPid( TSelf(wxProcessEvent) _obj );



/* wxStreamBase */
TClassDef(wxStreamBase)
int        wxStreamBase_GetLastError( TSelf(wxStreamBase) _obj );

int        wxStreamBase_GetSize( TSelf(wxStreamBase) _obj );

TBool      wxStreamBase_IsOk( TSelf(wxStreamBase) _obj );