wxc/include/wxc.h




/* process */
TClass(wxProcess) wxProcess_Open( TString cmd, int flags );

TBool      wxProcess_IsErrorAvailable( TSelf(wxProcess) _obj );

TBool      wxProcess_IsInputAvailable( TSelf(wxProcess) _obj );

TBool      wxProcess_IsInputOpened( TSelf(wxProcess) _obj );

int        wxKill( int pid, int signal );


void       wxStreamBase_Delete( TSelf(wxStreamBase) obj);